--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 
     <header>
 
-        <div>
+        <div class="inicio">
             <img src="" alt="">
-            <h2>Empresa de empleados</h2>
+            <a href="#">Inicio</a>
+            <a href="#">Menu</a>
+            <a href="#">Iniciar Sesión</a>
+            <a href="#">Salir</a>
+            
         </div>
 
     </header>
@@ -57,12 +61,13 @@
     <script src="./assets/js/app.js"></script>
 
     <footer>
-        <div>
+        <div class="final">
 
         <ul>
-            <li>sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65</li>
-            <li>lore</li>
-            <li>asasa</li>
+            <li><a href="#">inicio</a></li>
+            <li><a href="#">inicio</a></li>
+            <li><a href="#">inicio</a></li>
+            <li><a href="#">inicio</a></li>
         </ul>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, ea ad laboriosam repellendus modi in molestias suscipit sed ab exercitationem aperiam vitae similique fugiat vel ipsam corporis, aspernatur at sint.</p>
         <i></i>
