--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
         <ul>
             <li><a href="#">inicio</a></li>
-            <li><a href="#">inicio</a></li>
-            <li><a href="#">inicio</a></li>
-            <li><a href="#">inicio</a></li>
+            <li><a href="#">soluciòn de problemas</a></li>
+            <li><a href="#">ayuda</a></li>
+            <li><a href="#">Te llamamos</a></li>
         </ul>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil, ea ad laboriosam repellendus modi in molestias suscipit sed ab exercitationem aperiam vitae similique fugiat vel ipsam corporis, aspernatur at sint.</p>
         <i></i>
